spade-tests/src/snapshots/spade_tests__ast_lowering__stage_index_overflow.snap
---
source: spade-tests/src/ast_lowering.rs
---
pipeline(3) main(clk: clock, x: int<8>) -> int<8> {
    reg;
    reg;
    reg;
        stage(+1).x
}


error: Pipeline references stage 4 which is beyond the end of the pipeline
  ┌─ testinput:5:9
  │
1 │ pipeline(3) main(clk: clock, x: int<8>) -> int<8> {
  │          - Depth 3 specified here
  ·
5 │         stage(+1).x
  │         ^^^^^^^^^ Reference past the end of the pipeline
  │
  = help: This offset is relative to the current stage which is 3
